force-app/main/default/objects/CSV_Import_Mapping__mdt/CSV_Import_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>This helps define what records will be imported</description>
    <label>CSV Import Mapping</label>
    <pluralLabel>CSV Import Mappings</pluralLabel>
</CustomObject>