force-app/main/default/objects/CSV_Import_Mapping__mdt/fields/Allow_re_imports__c.field-meta.xml
<CustomField>
    <fullName>Allow_re_imports__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick this box to include previous exported records that match the criteria in this import</inlineHelpText>
    <label>Allow re-imports</label>
    <type>Checkbox</type>
</CustomField>