force-app/main/default/objects/CSV_Import_Mapping__mdt/fields/CSV_Import_RecordType__c.field-meta.xml
<CustomField>
    <fullName>CSV_Import_RecordType__c</fullName>
    <inlineHelpText>Provide the developer name for the CSV Import RecordType that this process should be triggered against</inlineHelpText>
    <label>CSV Import RecordType</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>