force-app/main/default/objects/CSV_Import_Mapping__mdt/fields/Import_Object__c.field-meta.xml
<CustomField>
    <fullName>Import_Object__c</fullName>
    <inlineHelpText>Select the object that you want to import records from</inlineHelpText>
    <label>Import Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>CSV_Import_Mapping_Object</relationshipLabel>
    <relationshipName>CSV_Import_Mapping_Object</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>