force-app/main/default/objects/CSV_Import_Mapping__mdt/fields/Mapping_Field__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Field__c</fullName>
    <inlineHelpText>Select the field on the import object that you want to link this csv export to</inlineHelpText>
    <label>Mapping Field</label>
    <metadataRelationshipControllingField>CSV_Import_Mapping__mdt.Import_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>CSV_Import_Mapping_Field</relationshipLabel>
    <relationshipName>CSV_Import_Mapping_Field</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>